--- a/dev/main.scss
+++ b/dev/main.scss
@@ -31,7 +31,11 @@ h1, h2, h3, h4, h5 {
 
 a {
 	text-decoration: none;
-	outline: 0;
+	outline: 0 !important;
+}
+
+a:active,a:focus {
+outline: none !important;
 }
 
 input[type="text"],
@@ -59,10 +63,9 @@ $mainOrange: #F56D45;
 // MAIN LANDING PAGE #WELCOME
 // ==================================
 
-
 #welcome {
 	position: relative;
-	background: url('../dist/images/BG1.jpg') no-repeat center center fixed;
+	background: url("images/test.png");
 	background-size: cover;
 	width: 100%;
 	height: 100%;
@@ -77,6 +80,10 @@ $mainOrange: #F56D45;
 	left:0;
 	background:rgba(0,0,0,0.6);
 	opacity: 0.8;
+}
+
+.mobile-menu {
+	display: none;
 }
 
 .nav {
@@ -115,19 +122,23 @@ $mainOrange: #F56D45;
 	}
 	a {
 		color: #fff;
-		font-weight: 500;
+		font-weight: 200;
+		
 		transition: all 0.4s ease;
 		&:hover {
 			color: $mainOrange;
 		}
 	}
 }
+
+
 .hide {
 	display: none !important;
+	transition: all 0.4s ease-in-out;
 }
 .switch {
-	background-color: rgba(0, 0, 0, 0.8);
-	transition: all 0.4s ease;
+	background-color: rgba(0, 0, 0, 0.7);
+	transition: all 0.4s ease-in-out;
 	a {
 		color: #fff;
 	}
@@ -159,12 +170,97 @@ $mainOrange: #F56D45;
 		}
 }
 
+ // ==================================
+ // ABOUT SECTION #ABOUT
+ // ==================================
+
+ #about {
+ 	overflow: auto;
+ }
+
+ .page-down {
+ 	display: inline-block;
+ 	position: absolute;
+ 	text-align: center;
+ 	bottom: 40px;
+ 	left: 50%;
+ 	margin-left: -20px;
+ 	z-index: 99999;
+ 	cursor: pointer;
+ 	color: #ffffff;
+ 	transition: all 0.2s ease;
+ 		&:hover {
+ 			bottom: 44px;
+ 		}
+ }
+
+ .wrapper {
+ 	width: 80%;
+ 	margin: 0 auto;
+ 	position: relative;
+ }
+
+ .me-pic {
+ 	float: left;
+ 	padding-top: 40px;
+ 	text-align: center;
+ 		img {
+ 			border-radius: 50%;
+ 			border: 10px solid #eee;
+ 		}
+ }
+
+ .info {
+ 	width: 66%;
+ 	float: left;
+ 	padding: 40px;
+ 	margin-left: 3%;
+ 	p {
+ 		font-size: 1.25em;
+ 	}
+ 	h2 {
+ 		font-size: 1.75em;
+ 	}
+ 	a {
+ 		display: inline-block;
+ 		padding: 10px;
+ 		text-transform: uppercase;;
+ 		margin-top: 10px;
+ 		background: $mainOrange;
+ 		color: #fff;
+ 		&:hover {
+ 			transition: all 0.4s ease;
+ 		}
+
+ 	}
+ }
+
+ .media {
+ 	position: absolute;
+ 	right: 0;
+ 	top: 110px;
+ 	li {
+ 		list-style-type: none;
+ 		padding: 10px 0;
+ 	}
+ 		a {
+ 			color: #000;
+ 			transition: all 0.2s ease;
+ 			&:hover {
+ 				color: $mainOrange;
+ 			}
+ 		}
+ }
+
+
 // ==================================
 // PORTFOLIO SECTION #PORTFOLIO
 // ==================================
 
 
-#portfolio{}
+#portfolio{
+	background: #EEEEEE;
+}
 .container {
 	width: 90%;
 	margin: 0 auto;
@@ -173,22 +269,37 @@ $mainOrange: #F56D45;
 .heading {
 	text-align: center;
 	text-transform: uppercase;
+	padding-top: 15px;
+	font-weight: 500;
 }
 .group {
 	background: #fff;	
 	padding: 70px 0;
 }
 
+.secret {
+	display: none;
+	text-align: center;
+	img {
+		width: 70%;
+		height: 50%;
+	}
+
+}
 .group.grey {
 	background: #EEEEEE;
 }
+.alt {
+	display: block;
+}
+
 .side {
 	width: 46.969696969697%;
 	margin: 0 1.515151515152%;
 	float: left;
 	position: relative;
 		img {
-			width: 70%;
+			width: 75%;
 			height: 50%;
 		}
 		ul {
@@ -229,7 +340,7 @@ $mainOrange: #F56D45;
 					
 				}
 				&:hover {
-					background: #bada55;
+					background: #343434;
 				}
 		}
 }
@@ -238,87 +349,241 @@ $mainOrange: #F56D45;
 	text-align: center;
 }
 
-
 // ==================================
-// ABOUT ME SECTION #ABOUTME
+// FOOTER SECTION #FOOTER
 // ==================================
 
-#about {
+#footer {
+	background-color: #343434;
+	clear: both;
 	overflow: auto;
-}
-
-.page-down {
-	display: inline-block;
-	position: absolute;
-	text-align: center;
-	bottom: 40px;
-	left: 50%;
-	margin-left: -20px;
-	z-index: 99999;
-	cursor: pointer;
-	color: #ffffff;
-	transition: all 0.2s ease;
-		&:hover {
-			bottom: 44px;
-		}
-}
-
-.wrapper {
-	width: 80%;
-	margin: 0 auto;
 	position: relative;
+	padding: 20px 0;
 }
 
-.me-pic {
+.email-wrap {
+	width: 100%; 
 	float: left;
-	padding-top: 40px;
 	text-align: center;
-		img {
-			border-radius: 50%;
-			border: 10px solid #eee;
-		}
+	padding-top: 10px;
 }
 
-.info {
-	width: 66%;
-	float: left;
-	padding: 40px;
-	margin-left: 3%;
-	p {
-		font-size: 1.25em;
-	}
-	h2 {
-		font-size: 1.75em;
+.email {
+	width: auto;
+	font-size: 1.0em;
+	margin: 0;
+	text-align: center;
+	display: inline-block;
+	position: relative;
+	text-transform: uppercase;
+	a {
+		color: $mainOrange;
+		font-weight: 200;
 	}
 }
 
-.media {
-	position: absolute;
-	right: 0;
-	top: 110px;
+.email:after {
+	content: '';
+	display: block;
+	margin: auto;
+	height: 3px;
+	width: 0px;
+	background: transparent;
+	transition: width .5s ease, background-color .5s ease;
+}
+
+.email:hover:after {
+	width: 100%;
+	background: #fff;
+}
+
+ul.social-footer {
+	padding-left: 0;
+	width: 100%;
+	
+	margin: 0;
+	text-align: center;
 	li {
+		display: inline-block;
 		list-style-type: none;
-		padding: 10px 0;
-	}
+		padding: 0 10px;
+		color: #fff;
 		a {
-			color: #000;
+			color: #fff;
+			&:hover {
+				color: $mainOrange;
+			}
 		}
+	}
 }
 
-
-
+.maste {
+	width: 100%;
+	text-align: center;
+	background: #2C2C2C;
+	color: #fff;
+	overflow: auto;
+	font-size: 0.75em;
+	span {
+		color: #555555;
+		text-transform: uppercase;
+	}
+}
 
 
 // ==========================================================================
 
+
+@media (max-width: 1000px) {
+	.side img {
+		width: 90%;
+	}
+}
+
+@media (max-width: 1090px) {
+	.info {
+		margin-left: 0;
+		width: 55%;
+	}
+}
+
 /* Portrait tablet and small desktops */
-@media (max-width: 940px) {
+@media (max-width: 800px) {
+
+
+//PORTFOLIO LAYOUT
+	.side {
+		width: 100%;
+		margin: 0;
+		text-align: center;
+		li {
+			margin-bottom: 5px;
+		}
+		h2 {
+			margin-top: 0;
+		}
+		img {
+			width: 55%;
+		}
+	}
+
+	.alt {
+		display: none;
+	}
+
+	.secret {
+		display: block;
+	}
+
+	.button {
+		margin: 0 auto;
+	}
+
+	.info {
+		width: 100%;
+		padding: 0;
+	}
+	.me-pic {
+		text-align: center;
+		width: 100%;
+		float: none;
+	}
+
 }
 
 /* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
+	.nav ul {
+		width: 80%;
+		text-align: right;
+		padding-right: 5px;
+	}
+}
+
+@media (min-width: 541px) and (max-width: 2000px) {
+	.nav ul {
+		display: block !important;
+	}
 }
 
 /* Landscape phones and down */
-@media (max-width: 480px) {
+@media (max-width: 540px) {
+
+//WELCOME PAGE
+
+	.page-down {
+		display: none;
+	}
+
+//MENU BAR
+	.nav ul {
+		width: 100%;
+		padding: 0;
+		text-align: center;
+		float: none;
+		display: block;
+		li {
+			display: block;
+			font-size: 1.35em;
+			border-top: 2px solid #343434;
+			padding: 10px 0;
+		}
+		h3 {
+			width: auto;
+
+		}
+	}
+	.mobile-menu  {
+		display: block;
+		text-align: right;
+		color: #fff;
+		font-size: 40px;
+		padding-right: 10px;
+		padding-top: 5px;
+		padding-bottom: 5px;
+		cursor: pointer;
+	}
+
+	.nav ul {
+		display: none;
+		background-color: #fff;
+		a {
+			color: #343434;
+			display: block;
+			width: 100%;
+		}
+	}
+
+
+//ABOUT LAYOUT
+	.info {
+		width: 100%;
+		padding: 0;
+		margin: 0;
+		a {
+			width: 100%;
+			text-align: center;
+		}
+	}
+
+	.me-pic {
+		width: 80%;
+	}
+
+	.media {
+		display: none;
+	}
+
+//PORTFOLIO LAYOUT
+
+	.button {
+		margin: 0 auto;
+	}
+	.side .button {
+		width: 100%;
+	}
+	.group {
+		padding: 25px 0;
+	}
+
 }
