burger icon shit

--- a/dev/main.scss
+++ b/dev/main.scss
@@ -56,6 +56,7 @@ input:focus::-webkit-input-placeholder {
 
 $mainOrange: #F56D45;
 
+
 // ==========================================================================
 
 // ==================================
@@ -109,7 +110,9 @@ $mainOrange: #F56D45;
 		text-align: right;
 		width: 80%;
 		float: right;
-		margin: 19px 0;
+		padding-top: 19px;
+		padding-bottom: 19px;
+		margin-bottom: 0;
 	}
 	li {
 		display: inline-block;
@@ -143,6 +146,10 @@ $mainOrange: #F56D45;
 	h3 {
 		color: #fff;
 	}
+}
+
+.collapse {
+	margin-top: 0 !important;
 }
 
 .intro-wrap {
@@ -535,7 +542,10 @@ ul.social-footer {
 		padding: 0;
 		text-align: center;
 		float: none;
-		display: block;
+		display: none;
+		background-color: #fff;
+		margin-bottom: 0 !important;
+		margin-top: 50px;
 		li {
 			display: block;
 			font-size: 1.35em;
@@ -544,7 +554,11 @@ ul.social-footer {
 		}
 		h3 {
 			width: auto;
-
+		}
+		a {
+			color: #343434;
+			display: block;
+			width: 100%;
 		}
 	}
 	.mobile-menu  {
@@ -558,14 +572,43 @@ ul.social-footer {
 		cursor: pointer;
 	}
 
-	.nav ul {
-		display: none;
-		background-color: #fff;
-		a {
-			color: #343434;
-			display: block;
-			width: 100%;
-		}
+	.burger,
+	.burger:before,
+	.burger:after {
+	  position: absolute;
+	  top: 28px;
+	  right: 18px;
+	  width: 24px;
+	  height: 4px;
+	  background: #fff;
+	  cursor: pointer;
+	  -webkit-transition: background 0.3s, -webkit-transform 0.3s, top 0.3s;
+	}
+
+	.burger:before {
+	  top: -8px;
+	  left: 0;
+	  content: "";
+	}
+
+	.burger:after {
+	  top: 8px;
+	  left: 0;
+	  content: "";
+	}
+
+	.open .burger {
+	  background: transparent;
+	}
+
+	.open .burger:before {
+	  top: 0;
+	  -webkit-transform: rotate3d(0, 0, 1, -45deg);
+	}
+
+	.open .burger:after {
+	  top: 0;
+	  -webkit-transform: rotate3d(0, 0, 1, 45deg);
 	}
 
 
