--- a/dev/main.scss
+++ b/dev/main.scss
@@ -82,9 +82,7 @@ $mainOrange: #F56D45;
 		text-align: left;
 		width: 20%;
 		float: left;
-		padding-left: 10px;
-		padding-top: 5px;
-		padding-bottom: 5px;
+		padding: 10px;
 		margin: 0;
 		font-weight: 500;
 		span {
