some updates to the baby

--- a/dev/main.scss
+++ b/dev/main.scss
@@ -1,4 +1,4 @@
-article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */
+	article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */
 input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
 
 *, *:before, *:after {
@@ -22,6 +22,7 @@ body, html {
 	width: 100%;
 	margin: 0 auto;
 	padding-top: -8px;
+	position: relative;
 }
 
 h1, h2, h3, h4, h5 {
@@ -41,6 +42,40 @@ outline: none !important;
 
 $mainOrange: #F56D45;
 
+.fuzzy {
+	position: fixed; 
+	top: 0; 
+	left: 0; 
+	background: rgba(0,0,0,0.6); 
+	z-index: 5; 
+	width: 100%; 
+	height: 100%; 
+	display: none; 
+	span.closeThis {
+		position: absolute;
+		top: 0;	
+		right: 10px;
+		cursor: pointer;
+		color: $mainOrange;
+		font-size: 22px;
+		font-weight: 700;
+	}
+}
+
+.readMore {
+	transform: translateY(-50%);
+	position: relative;
+	top: 50%;
+	width: 50%;
+	margin: 0 auto;
+	background: #fff;
+	padding: 10px;
+	border-radius: 10px;
+	box-shadow: 0 0 20px 0 #303030;
+	h2 {
+		font-size: 20px;
+	}
+}
 
 // ==========================================================================
 
@@ -93,7 +128,7 @@ $mainOrange: #F56D45;
 		text-align: right;
 		width: 80%;
 		float: right;
-		padding-top: 19px;
+		margin-top: 24px;
 		padding-bottom: 19px;
 		margin-bottom: 0;
 	}
@@ -150,6 +185,11 @@ $mainOrange: #F56D45;
 			font-size: 2em;
 			text-transform: uppercase;
 			font-weight: 500;
+			margin-bottom: 0;
+		}
+		h3 {
+			font-size: 1.5em;
+			margin: 0;
 		}
 }
 
@@ -237,6 +277,17 @@ $mainOrange: #F56D45;
  		}
  }
 
+.res {
+	display: inline-block;
+	padding: 0;
+	li {
+		display: inline-block;
+		padding: 0 5px;
+		&:first-child {
+			padding: 0;
+		}
+	}
+}
 
 // ==================================
 // PORTFOLIO SECTION #PORTFOLIO
@@ -245,6 +296,7 @@ $mainOrange: #F56D45;
 #portfolio{
 	background: #EEEEEE;
 }
+
 .container {
 	width: 90%;
 	margin: 0 auto;
@@ -255,6 +307,7 @@ $mainOrange: #F56D45;
 	text-transform: uppercase;
 	padding-top: 15px;
 	font-weight: 500;
+	margin-bottom: 0;
 }
 .group {
 	background: #fff;	
@@ -337,6 +390,17 @@ $mainOrange: #F56D45;
 				&:hover {
 					background: #343434;
 				}
+		}
+		.special {
+			display: inline-block;
+			span {
+				text-transform: uppercase;
+				width: 100%;
+				height: 100%;
+				color: #fff;
+				display: block;
+				padding: 10px;
+			}
 		}
 }
 
