--- a/dev/main.scss
+++ b/dev/main.scss
@@ -329,7 +329,61 @@ $mainOrange: #F56D45;
 .alt {
 	display: block;
 }
-
+.side-special {
+	width: 75%;
+	margin: 0 auto;
+	h1 {
+		display: inline-block;
+		line-height: 40px;
+		color: #5a5a5a;
+		font-size: 1.90em;
+		font-weight: 300;
+		margin-bottom: 0;
+		span {
+			color: #777;
+		}
+	}
+	p {
+		font-size: 21px;
+		#color: #5a5a5a;
+	}
+	ul {
+		padding-left: 0;
+		li {
+			display: inline-block;
+			color: rgb(0, 0, 0);
+			background: rgb(255, 255, 255);
+			border: 1px solid #000;
+			padding: 8px;
+			text-transform: uppercase;
+			transition: 0.4s all ease;
+			&:hover {
+				background: $mainOrange;
+				color: #fff;
+			}
+		}
+	}
+	.button {
+		width: 180px;
+		background: $mainOrange;
+		color: #fff;
+		cursor: pointer;
+		text-align: center;	
+		transition: all 0.4s ease;
+			a {
+				text-transform: uppercase;
+				width: 100%;
+				height: 100%;
+				color: #fff;
+				display: block;
+				padding: 10px;
+				
+			}
+			&:hover {
+				background: #343434;
+			}
+	}
+}
 .side {
 	width: 46.969696969697%;
 	margin: 0 1.515151515152%;
@@ -343,7 +397,7 @@ $mainOrange: #F56D45;
 			padding-left: 0;
 		}
 		h1 {
-			font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+			//font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 			display: inline-block;
 			line-height: 40px;
 			color: #5a5a5a;
